# snap7

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  README.md
core/: s7_client.cpp  s7_micro_client.cpp  s7_server.cpp
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  server.cpp
examples/pascal/: README.txt  snap7.pas
examples/plain-c/: CMakeLists.txt
lib/: snap7_libmain.cpp
sys/: snap_msgsock.cpp  snap_tcpsrvr.cpp
